@@ -1,3 +1,7 @@
+2010-11-26 Gregory Casamento <greg.casamento@gmail.com>
+
+	* NSTabView+Gnome.m: Use new theme methods.
+
 2010-01-09 Hans Baier <hansfbaier@googlemail.com>
 
 	* Initial import; thus dicontinuing my git repository on
